--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/feedback_client.html.twig
@@ -1,7 +1,7 @@
 <main class="dashboard feedback client">
     <div class="container">
 
-        <div class="row events-menu">
+        <div class="row events-menu owl-carousel owl-theme">
             <ul>
                 <li class="event-item non-active">
                     <a title="Event name 2">Event name 2</a>
