--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -376,8 +376,8 @@
                         <option <% if(curPerf.type == 6) { %> selected <% } %> value="6">Other</option>
                     </select>
 
-                    <% if(curPerf.type == 1) { %>
-                    <span quot-edit-option>
+
+                    <span quot-edit-option <% if(curPerf.type != 1) { %> style="display:none" <% } %>>
                         <select quot-edit-qty name="qty" class="quantity-select">
                             <%
                             for(var opt = 1; opt < 7; opt++) {
@@ -401,7 +401,6 @@
                         </select>
                         <span>min</span>
                     </span>
-                    <% } %>
 
                     <div class="pull-right">
                         <input edit-custom-price class="price-box" value="3000">
@@ -483,28 +482,30 @@
                     </select>
 
                     <% if(curPerf.type == 1) { %>
-                    <select quot-edit-qty name="qty" class="quantity-select">
-                        <%
-                        for(var opt = 1; opt < 7; opt++) {
-                        if(option.qty == opt) {
-                        %>
-                        <option selected value="<%=opt%>"><%=opt%></option>
-                        <%
-                        } else {
-                        %>
-                        <option value="<%=opt%>"><%=opt%></option>
-                        <%
-                        }
-                        }
-                        %>
-                    </select>
-                    <span>x</span>
-                    <select quot-edit-duration name="duration" class="duration-select">
-                        <option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>
-                        <option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>
-                        <option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>
-                    </select>
-                    <span>min</span>
+                    <span quot-edit-option>
+                        <select quot-edit-qty name="qty" class="quantity-select">
+                            <%
+                            for(var opt = 1; opt < 7; opt++) {
+                            if(option.qty == opt) {
+                            %>
+                            <option selected value="<%=opt%>"><%=opt%></option>
+                            <%
+                            } else {
+                            %>
+                            <option value="<%=opt%>"><%=opt%></option>
+                            <%
+                            }
+                            }
+                            %>
+                        </select>
+                        <span>x</span>
+                        <select quot-edit-duration name="duration" class="duration-select">
+                            <option <% if(option.duration == 45) { %> selected <% } %> value="45">45 min</option>
+                            <option <% if(option.duration == 50) { %> selected <% } %> value="50">50 min</option>
+                            <option <% if(option.duration == 55) { %> selected <% } %> value="55">55 min</option>
+                        </select>
+                        <span>min</span>
+                    </span>
                     <% } %>
 
                     <div class="pull-right">
