--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -405,7 +405,7 @@
                     </span>
 
                     <div class="pull-right">
-                        <input edit-custom-price class="price-box" value="3000">
+                        <input edit-custom-price custom-extra-price class="price-box" value="3000">
                         <span>GBP</span>
                         <span act-delete class="pull-right"><i class="fa fa-trash"></i></span>
                     </div>
@@ -511,7 +511,7 @@
                     <% } %>
 
                     <div class="pull-right">
-                        <input edit-custom-price class="price-box" value="3000">
+                        <input edit-custom-price custom-extra-price class="price-box" value="3000">
                         <span>GBP</span>
                         <span act-delete class="pull-right"><i class="fa fa-trash"></i></span>
                     </div>
