--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
@@ -88,13 +88,11 @@
                         </div>
                     </article>
                 {% endfor %}
-
-
-
+                {% for feedback in feedbacks %}
                 <article class="col-xs-12 dialog-rating-container noselect" data-longtap-duration="500">
                     <div class="wrap clearfix">
                         <div class="message-info">
-                            <span class="pull-right">14 December 2016</span>
+                            <span class="pull-right">{{ feedback.createdAt }}</span>
                             <span>Congratulations! You have received new rating!</span>
                         </div>
                         <div class="avatar">
@@ -104,17 +102,19 @@
                             <span class="user-name">Diana Croll</span>
                         </div>
                         <div class="rating">
+                            {% for i in 0..feedback.rating %}
                             <i class="star-icon filled"></i>
-                            <i class="star-icon filled"></i>
-                            <i class="star-icon filled"></i>
+                            {% endfor %}
+                            {% for i in 0..(5-feedback.rating) %}
                             <i class="star-icon unfilled"></i>
-                            <i class="star-icon unfilled"></i>
+                            {% endfor %}
                         </div>
                         <div class="message-block">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                           <p>{{ feedback.feedback }}</p>
                         </div>
                     </div>
                 </article>
+                {% endfor %}
             </div>
         </div>
     </div>
