Update bookings page for artist. 28/11/2016 5:06 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/bookings.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/bookings.css
@@ -72,16 +72,14 @@
 }
 i.pound {
     display: inline-block;
-    height: 27px;
     position: absolute;
-    top: 121px;
-    left: 26px;
-    width: 27px;
-    background: url(../../assets/images/pound_ic.png);
+    top: 118px;
+    font-size: 24px;
+    /*background: url(../../assets/images/pound_ic.png);*/
 }
 i.bookings {
     display: inline-block;
-    background-size: cover;
+    background-size: cover !important;
     height: 82px;
     width: 61px;
     position: absolute;
@@ -91,7 +89,7 @@ i.bookings {
 }
 i.escrow {
     display: inline-block;
-    background-size: cover;
+    background-size: cover !important;
     height: 80px;
     width: 80px;
     position: absolute;
@@ -101,7 +99,7 @@ i.escrow {
 }
 i.available {
     display: inline-block;
-    background-size: cover;
+    background-size: cover !important;
     height: 81px;
     width: 114px;
     position: absolute;
@@ -123,8 +121,9 @@ i.available {
     font-size: 14px;
     opacity: .87;
 }
-i.total_collected_img {
+i.total_collected_bag {
     display: inline-block;
+    background-size: cover !important;
     position: absolute;
     left: 18px;
     top: 18px;
@@ -134,19 +133,25 @@ i.total_collected_img {
 }
 i.pound_black {
     display: inline-block;
-    position: absolute;
     height: 21px;
     width: 18px;
-    background-image: url(../../assets/images/pound-black.png);
-    background-repeat: no-repeat;
+    /*background-image: url(../../assets/images/pound-black.png);*/
+    /*background-repeat: no-repeat;*/
 }
-.total_collected i.pound_black {
-    top: 24px;
-    left: 303px;
+
+.total_collected .pound_black {
+    margin: 0 0 0 4px;
 }
+
+.total_collected i.pound_black,
 .total_collected p .total_collected__ammount {
     font-size: 18px;
-    margin-left: 24px;
+    font-family: LatoRegular;
+    font-weight: 400;
+}
+
+.total_collected p .total_collected__ammount {
+    margin-left: 4px;
 }
 .enquiries-wrap__heading {
     font-size: 15px;
@@ -194,7 +199,7 @@ div.enquires-wrap-new {
 .enquires-wrap-new .enq-block_flexboxed .flex_1 {
     width: 244px;
     border: 1px solid transparent;
-}   
+}
 .enquires-wrap-new .enq-block_flexboxed .flex_2 {
     border: 1px solid transparent;
     display: flex;
@@ -286,29 +291,25 @@ div.enquires-wrap-new {
 .enquires-wrap-new .enq-block_flexboxed .flex_2 .flex_2__item-chatroom-btn {
     margin-left: 1px;
 }
-.flex_3__ammount i.pound_black {
-    top: 3px;
-    right: 35px;
-}
 @media (max-width: 991px) {
     i.available {
         width: 57px;
         height: 40px;
         background-size: cover;
         bottom: 27.5px;
-/*        display: none;*/
+        /*        display: none;*/
     }
     i.escrow {
         width: 60px;
         height: 60px;
         background-size: cover;
-/*        display: none;*/
+        /*        display: none;*/
     }
     i.bookings {
         width: 40px;
         height: 55px;
         background-size: cover;
-/*        display: none;*/
+        /*        display: none;*/
     }
 }
 @media (max-width: 767px) {
@@ -354,7 +355,7 @@ div.enquires-wrap-new {
         flex-direction: column;
         margin-bottom: 4px;
     }
-    i.total_collected_img {
+    i.total_collected_bag {
         left: 10px;
         top: 21px;
     }
@@ -434,11 +435,6 @@ div.enquires-wrap-new {
     .total_collected p {
         width: 150px;
         line-height: 1.22;
-    }
-    .total_collected i.pound_black {
-        top: 27px;
-        left: auto;
-        right: 61px;
     }
     .enquiries-wrap__heading {
         padding-left: 11px;
